objects/Validation_Step_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>Expected_To_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expected To Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>43</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interactive_Validation_Step__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interactive Validation Step</label>
        <referenceTo>Interactive_Validation_Step__c</referenceTo>
        <relationshipLabel>Validation Step Metadatas</relationshipLabel>
        <relationshipName>Validation_Step_Metadatas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>48</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CustomObject</fullName>
                    <default>true</default>
                    <label>CustomObject</label>
                </value>
                <value>
                    <fullName>CustomField</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Validation Step Metadata</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VSM-{000000}</displayFormat>
        <label>Validation Step Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validation Step Metadatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>